fixed: z-index for member roles

--- a/assets/scss/components/_member.scss
+++ b/assets/scss/components/_member.scss
@@ -18,6 +18,7 @@
             position: relative;
             font-size: 12px;
             margin: 4px 0px;
+            z-index: -1;
 
             &.admin {
                 &:before {
